Created attachment 80953 [details] Image from geoserver We export svg-images from a wms-system (geoserver with batik). They are correct in inkscape or firefox but if we open them in LO the look is very ugly. All areas have a black background- as it is not intendet to be.
Created attachment 80954 [details] screenshot from LO
I can confirm with LO 4.0.4.2 (Win7 32bit), white background change to black. @Schorsch, perhaps you could also search similar bug that have been reported before..whether it's a duplicate?
Created attachment 81092 [details] Image showing some lines
https://bugs.freedesktop.org/show_bug.cgi?id=37072 shows a similiar problem. I changed the attachment with a simpler one.
Created attachment 81093 [details] Image with some polygons from geoserver
Created attachment 81094 [details] Screenshot from LO, with additional black polygons
Created attachment 81095 [details] expected result in Firefox
There are some unwanted areas in LO-Draw - they are black. All other areas are well.
Created attachment 86438 [details] screenshot for attachment 81903 [details] The image is displayed correctly when opened via Insert->Picture->From File Version: 4.2.0.0.alpha0+ Build ID: f4d3954fc6106b3ae0ee16ab0fcde15d8cb945e3 Linux (Ubuntu)
this is true, but it takes a long time. The example document is only a small part of a bigger SVG file. Opening is fast, insert is slow.
With Beta 1 of LO 4.3 the problem persists. The wrong background are ClipRegions. See https://issues.apache.org/ooo/show_bug.cgi?id=124313
With version 4.2.4 the image is no longer displayed correctly when opened via Insert->Picture->From File
Christina Roßmanith has committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e27d23d7e665cc0aeac8fc9ea2236bf8bc088ff fdo#65864: dont't traverse defs-nodes when in shape writing mode The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Version: 4.3.4.0.0+ Build ID: b3e96abc32623891a7147c9f8fa6477ffcddd643 TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-10-13_09:24:43: Insert->Picture->From File : works fine with small images, with bigger images consumes a lot of memory - crashes File->Open : black background
in Version: 4.4.0.2 the problem is gone, SVG is working fine. Thanks!
I confirm that this issue can no longer be reproduced with Version: 5.0.0.5 Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b Locale: es-ES (es_ES) on Windows 7 (64-bit) Tested Insert->Picture->From File and File->Open. Thus, I close it as RESOLVED WORKSFORME
Xisco Fauli committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3056a6b6e39b57c66ebaf5210264b689f02f5fc3 SVG: tdf#95332 defs can contain shapes so fix tdf#65864 in... It will be available in 5.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.