fdo#65864: dont't traverse defs-nodes when in shape writing mode

Relevant for opening svg images via File->Open:
Children of the <defs> element should be interpreted only during the
style collecting step. Collecting <path> elements from clip paths
during the shape writing step leads to unwanted black polygons.

Change-Id: I73598134c9be2877e975a7e756541ec3026fe768